# Nektar

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  differencias
docs/developer-guide/: CMakeLists.txt  developer-guide.bib  developer-guide.tex  developers-guide.bib  developers-guide.tex
docs/developer-guide/prelims/: prelims.tex
docs/developer-guide/shared/: devguide-preamble.tex
docs/developer-guide/solvers/: DataStructure.tex  compressible-solver.tex  incompressible-solver.tex  pulsewave-solver.tex  solvers-master.tex
docs/user-guide/: CMakeLists.txt  user-guide.aux  user-guide.out  user-guide.tex  user-guide.toc
docs/user-guide/command-line/: command-line.tex
docs/user-guide/faq/: faq.tex
docs/user-guide/installation/: precompiled.tex  source.tex
docs/user-guide/optimisation/: optimisation.tex
docs/user-guide/solvers/: ape.tex  compressible-flow.tex  incompressible-ns.tex  pulse-wave.tex
docs/user-guide/utilities/: fieldconvert.tex  nekmesh.tex
docs/user-guide/xml/: xml-conditions.tex  xml-expansions.tex  xml-expressions.tex  xml-filters.tex  xml-forcing.tex  xml-geometry.tex  xml-movement.tex  xml-refinements.tex  xml.tex
solvers/: CMakeLists.txt
solvers/ADRSolver/: ADRSolver.cpp  CMakeLists.txt  Plugin.h  Plugins.cpp  Plugins.h
solvers/ADRSolver/EquationSystems/: ALEDemo.cpp  ALEDemo2.cpp  CFLtester.cpp  CFLtester.h  CMakeLists.txt  CrossField.cpp  CrossField.h  EigenValuesAdvection.cpp  EigenValuesAdvection.h  Helmholtz.cpp  Helmholtz.h  Laplace.cpp  Laplace.h  MMFAdvection.cpp  MMFAdvection.h  Poisson.cpp  Poisson.h  Projection.cpp  Projection.h  SteadyAdvectionDiffusion.cpp  SteadyAdvectionDiffusion.h  SteadyAdvectionDiffusionReaction.cpp  SteadyAdvectionDiffusionReaction.h  UnsteadyAdvection.cpp  UnsteadyAdvection.h  UnsteadyAdvectionDiffusion.cpp  UnsteadyAdvectionDiffusion.h  UnsteadyDiffusion.cpp  UnsteadyDiffusion.h  UnsteadyInviscidBurger.cpp  UnsteadyInviscidBurger.h  UnsteadyReactionDiffusion.cpp  UnsteadyReactionDiffusion.h  UnsteadyViscousBurgers.cpp  UnsteadyViscousBurgers.h
solvers/ADRSolver/Tests/: AdvDiff3D_AllElmt_GJP.tst  AdvDiff3D_AllElmt_GJP.xml  AdvDiff_QuadTri_GJP.tst  AdvDiff_QuadTri_GJP.xml  Advection1D_FRDG_GAUSS_LAGRANGE.xml  Advection1D_FRDG_GLL_LAGRANGE.xml  Advection1D_FRDG_GLL_LAGRANGE_SEM.xml  Advection1D_FRDG_MODIFIED.xml  Advection1D_FRHU_GLL_LAGRANGE.xml  Advection1D_FRHU_GLL_LAGRANGE_SEM.xml  Advection1D_FRHU_MODIFIED.xml  Advection1D_FRSD_GLL_LAGRANGE.xml  Advection1D_FRSD_GLL_LAGRANGE_SEM.xml  Advection1D_FRSD_MODIFIED.xml  Advection1D_WeakDG_GAUSS_LAGRANGE.xml  Advection1D_WeakDG_GLL_LAGRANGE.xml  Advection1D_WeakDG_MODIFIED.xml  Advection2D_ISO_deformed_GAUSS_LAGRANGE_3x3.xml  Advection2D_ISO_deformed_GLL_LAGRANGE_3x3.xml  Advection2D_ISO_deformed_GLL_LAGRANGE_SEM_3x3.xml  Advection2D_ISO_deformed_MODIFIED_3x3.xml  Advection2D_ISO_reg_def_MODIFIED_3x3.xml  Advection2D_ISO_regular_GAUSS_LAGRANGE_3x3.xml  Advection2D_ISO_regular_GLL_LAGRANGE_3x3.xml  Advection2D_ISO_regular_GLL_LAGRANGE_SEM_3x3.xml  Advection2D_ISO_regular_MODIFIED_3x3.xml  Advection2D_ISO_regular_SSPRK2.xml  Advection2D_ISO_regular_SSPRK3.xml  Advection2D_Quad_GJP.tst  Advection2D_Quad_GJP.xml  Advection2D_Tri_GJP.tst  Advection2D_Tri_GJP.xml  Advection2D_dirichlet_deformed_GAUSS_LAGRANGE_10x10.xml  Advection2D_dirichlet_deformed_GLL_LAGRANGE_10x10.xml  Advection2D_dirichlet_deformed_GLL_LAGRANGE_SEM_10x10.xml  Advection2D_dirichlet_deformed_MODIFIED_10x10.xml  Advection2D_dirichlet_regular_GAUSS_LAGRANGE_10x10.xml  Advection2D_dirichlet_regular_GAUSS_LAGRANGE_10x10_MF.xml  Advection2D_dirichlet_regular_GLL_LAGRANGE_10x10.xml  Advection2D_dirichlet_regular_GLL_LAGRANGE_SEM_10x10.xml  (+235 more)
solvers/AcousticSolver/: APESolver.cpp  AcousticSolver.cpp
solvers/AcousticSolver/EquationSystems/: APE.cpp  APE.h  AcousticSystem.cpp  AcousticSystem.h  LEE.cpp  LEE.h
solvers/AcousticSolver/RiemannSolvers/: APELaxFriedrichsSolver.cpp  APELaxFriedrichsSolver.h  APEUpwindSolver.cpp  APEUpwindSolver.h  AcousticSolver.cpp  AcousticSolver.h  LEELaxFriedrichsSolver.cpp  LEELaxFriedrichsSolver.h  LEESolver.cpp  LEESolver.h  LEEUpwindSolver.cpp  LEEUpwindSolver.h
solvers/CardiacEPSolver/: CMakeLists.txt  CardiacEPSolver.cpp
solvers/CardiacEPSolver/CellModels/: AlievPanfilov.cpp  (+19 more)
solvers/CompressibleFlowSolver/: CMakeLists.txt  CompressibleFlowSolver.cpp  Description.md
solvers/DiffusionSolver/: CMakeLists.txt  DiffusionSolver.cpp  DiffusionSolverTimeInt.cpp  MMFDiffusion.cpp
solvers/DummySolver/: DummySolver.cpp
solvers/GalerkinBoltzmannSolver/: CMakeLists.txt  GalerkinBoltzmannSolver.cpp
solvers/ImageWarpingSolver/: ImageWarpingSolver.cpp
solvers/IncNavierStokesSolver/: CMakeLists.txt  IncNavierStokesSolver.cpp
solvers/LinearElasticSolver/: LinearElasticSolver.cpp
solvers/MMFSolver/: MMFSolver.cpp
solvers/OptionPricingSolver/: CMakeLists.txt  OptionPricingSolver.cpp
solvers/PulseWaveSolver/: CMakeLists.txt  PulseWaveSolver.cpp
solvers/ShallowWaterSolver/: ShallowWaterSolver.cpp
solvers/VortexWaveInteraction/: CMakeLists.txt  CalcL2ToLinfPressure.cpp  CalcVWIplusPressure.cpp  ExtractCriticalLayer.cpp  VortexWaveInteraction.cpp  VortexWaveInteraction.h  VortexWaveInteractionSolver.cpp
tests/: CMakeLists.txt  Metric.cpp  Metric.h  MetricEigenvalue.cpp  MetricEigenvalue.h  MetricFile.cpp  MetricFile.h  MetricFileExists.cpp  MetricFileExists.h  MetricL2.cpp  MetricL2.h  MetricLInf.cpp  MetricLInf.h  MetricNoWarning.cpp  MetricNoWarning.h  MetricPrecon.cpp  MetricPrecon.h  MetricPyUnitTest.cpp  MetricPyUnitTest.h  MetricRegex.cpp  MetricRegex.h  TestData.cpp  TestData.h  TestException.hpp  Tester.cpp.in  sha1.cpp  sha1.h
utilities/: CMakeLists.txt
utilities/Extras/: CMakeLists.txt  CheckXmlFile.cpp  VtkStripsToPolys.cpp  VtkToFld.cpp  VtkToPng.cpp
utilities/FieldConvert/: CMakeLists.txt  FieldConvert.cpp  Module.cpp
utilities/NekMesh/: CMakeLists.txt  NekMesh.cpp
utilities/SimpleMeshGen/: CMakeLists.txt  OneDMesh.cpp  Test1D
(+1192 files in other folders)
